style.css
body, h1, h2 {
  margin : 10px;
  padding : 0px;
  background : #fffeee;
}

.center {
  /*  width:1080px;*/
  width : 1180px;
  margin : 0 auto;
}

#topbar {
  /*  background:#24A750; */
  /*  background:#18453B; */
  background : #0db14b; 
  width : 1180px;
  height : 30px;
  font-size : 14px;
  line-height : 30px;
}

#head {
  margin-top : 14px;
}

#head .face {
  height : 350px;
  width : 350px;
  background : #333;
  overflow : hidden;
  float : left;
  margin-right : 14px;
  display : block;
}

#head .info {
  height : 350px;
  width : 830px;
}

#head .info .sub {
  font-size : 18px;
  line-height : 22px;
  margin-left : 10px;
}

h2 {
  font-size : 25px;
  color : #333;
  line-height : 25px;
}

h3 {
  margin : 0px;
  border-bottom : 2px solid #3299cc;
  width : 1180px;
  font-size : 20px;
  line-height : 30px;
  font-weight : 900;
  color : #5c3317;
}

img {
  border : none;
}

table {
  border : none;
  border-spacing : 0px;
  width : 1180px;
}

#footer {
  line-height : 60px;
  height : 60px;
  text-align : center;
  color : #000000;
  font-family : 'Tangerine',serif;
  text-shadow : 6px 6px 6px #aaa;
}

.tex sub, .latex sub, .latex sup {
  text-transform : uppercase;
}

.tex sub, .latex sub {
  vertical-align : -0.5ex;
  margin-left : -0.1667em;
  margin-right : -0.125em;
}

.tex, .latex, .tex sub, .latex sub {
  font-size : 1em;
}

.latex sup {
  font-size : 0.85em;
  vertical-align : 0.15em;
  margin-left : -0.36em;
  margin-right : -0.15em;
}

